datasets/dataset_txt/mitmproxy/mitmproxy_999.txt
riston commented on 26 Jul 2016 •
edited
Steps to reproduce the problem:
pip install --user mitmproxy
What is the expected behavior?
Latest installed version of mitmproxy
What went wrong?
    running egg_info
    writing requirements to src/cryptography.egg-info/requires.txt
    writing top-level names to src/cryptography.egg-info/top_level.txt
    writing entry points to src/cryptography.egg-info/entry_points.txt
    writing src/cryptography.egg-info/PKG-INFO
    writing dependency_links to src/cryptography.egg-info/dependency_links.txt
    warning: manifest_maker: standard file '-c' not found

    reading manifest file 'src/cryptography.egg-info/SOURCES.txt'
    reading manifest template 'MANIFEST.in'
    no previously-included directories found matching 'docs/_build'
    warning: no previously-included files matching '*' found under directory 'vectors'
    writing manifest file 'src/cryptography.egg-info/SOURCES.txt'
    running build_ext
    generating cffi module 'build/temp.linux-x86_64-3.5/_padding.c'
    creating build/temp.linux-x86_64-3.5
    generating cffi module 'build/temp.linux-x86_64-3.5/_constant_time.c'
    generating cffi module 'build/temp.linux-x86_64-3.5/_openssl.c'
    building '_openssl' extension
    creating build/temp.linux-x86_64-3.5/build
    creating build/temp.linux-x86_64-3.5/build/temp.linux-x86_64-3.5
    gcc -pthread -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -march=x86-64 -mtune=generic -O2 -pipe -fstack-protector-strong -fPIC -I/usr/include/python3.5m -c build/temp.linux-x86_64-3.5/_openssl.c -o build/temp.linux-x86_64-3.5/build/temp.linux-x86_64-3.5/_openssl.o
    build/temp.linux-x86_64-3.5/_openssl.c:724:6: error: conflicting types for ‘BIO_new_mem_buf’
     BIO *BIO_new_mem_buf(void *, int);
          ^~~~~~~~~~~~~~~
    In file included from /usr/include/openssl/asn1.h:65:0,
                     from build/temp.linux-x86_64-3.5/_openssl.c:440:
    /usr/include/openssl/bio.h:692:6: note: previous declaration of ‘BIO_new_mem_buf’ was here
     BIO *BIO_new_mem_buf(const void *buf, int len);
          ^~~~~~~~~~~~~~~
    build/temp.linux-x86_64-3.5/_openssl.c:2103:15: error: ‘SSLv2_method’ redeclared as different kind of symbol
     SSL_METHOD* (*SSLv2_method)(void) = NULL;
                   ^~~~~~~~~~~~
    In file included from build/temp.linux-x86_64-3.5/_openssl.c:526:0:
    /usr/include/openssl/ssl.h:2349:19: note: previous declaration of ‘SSLv2_method’ was here
     const SSL_METHOD *SSLv2_method(void); /* SSLv2 */
                       ^~~~~~~~~~~~
    build/temp.linux-x86_64-3.5/_openssl.c:2104:15: error: ‘SSLv2_client_method’ redeclared as different kind of symbol
     SSL_METHOD* (*SSLv2_client_method)(void) = NULL;
                   ^~~~~~~~~~~~~~~~~~~
    In file included from build/temp.linux-x86_64-3.5/_openssl.c:526:0:
    /usr/include/openssl/ssl.h:2351:19: note: previous declaration of ‘SSLv2_client_method’ was here
     const SSL_METHOD *SSLv2_client_method(void); /* SSLv2 */
                       ^~~~~~~~~~~~~~~~~~~
    build/temp.linux-x86_64-3.5/_openssl.c:2105:15: error: ‘SSLv2_server_method’ redeclared as different kind of symbol
     SSL_METHOD* (*SSLv2_server_method)(void) = NULL;
                   ^~~~~~~~~~~~~~~~~~~
    In file included from build/temp.linux-x86_64-3.5/_openssl.c:526:0:
    /usr/include/openssl/ssl.h:2350:19: note: previous declaration of ‘SSLv2_server_method’ was here
     const SSL_METHOD *SSLv2_server_method(void); /* SSLv2 */
                       ^~~~~~~~~~~~~~~~~~~
    error: command 'gcc' failed with exit status 1
error
  Rolling back uninstall of cryptography
  Replacing /home/risto/.local/lib/python3.5/site-packages/cryptography-1.4-py3.5.egg-info
  Replacing /home/risto/.local/lib/python3.5/site-packages/cryptography/__about__.py
  Replacing /home/risto/.local/lib/python3.5/site-packages/cryptography/__init__.py
  Replacing /home/risto/.local/lib/python3.5/site-packages/cryptography/__pycache__/__about__.cpython-35.pyc
  Replacing /home/risto/.local/lib/python3.5/site-packages/cryptography/__pycache__/__init__.cpython-35.pyc
  Replacing /home/risto/.local/lib/python3.5/site-packages/cryptography/__pycache__/exceptions.cpython-35.pyc
  Replacing /home/risto/.local/lib/python3.5/site-packages/cryptography/__pycache__/fernet.cpython-35.pyc
 .....................
Cleaning up...
  Removing source in /tmp/pip-build-spwlkgyj/mitmproxy
  Removing source in /tmp/pip-build-spwlkgyj/netlib
  Removing source in /tmp/pip-build-spwlkgyj/cryptography
Command "/usr/bin/python -u -c "import setuptools, tokenize;__file__='/tmp/pip-build-spwlkgyj/cryptography/setup.py';exec(compile(getattr(tokenize, 'open', open)(__file__).read().replace('\r\n', '\n'), __file__, 'exec'))" install --record /tmp/pip-ad0decf1-record/install-record.txt --single-version-externally-managed --compile --user --prefix=" failed with error code 1 in /tmp/pip-build-spwlkgyj/cryptography/
Exception information:
Traceback (most recent call last):
  File "/usr/lib/python3.5/site-packages/pip/basecommand.py", line 215, in main
    status = self.run(options, args)
  File "/usr/lib/python3.5/site-packages/pip/commands/install.py", line 317, in run
    prefix=options.prefix_path,
  File "/usr/lib/python3.5/site-packages/pip/req/req_set.py", line 742, in install
    **kwargs
  File "/usr/lib/python3.5/site-packages/pip/req/req_install.py", line 880, in install
    spinner=spinner,
  File "/usr/lib/python3.5/site-packages/pip/utils/__init__.py", line 718, in call_subprocess
    % (command_desc, proc.returncode, cwd))
Any other comments? What have you tried so far?
Installing only cryptography module causes no failures.
Versions: Python 3.5, OpenSSL 1.0.2h 3 May 2016
Mitmproxy Version: Latest
Operating System: Arch Linux